# ModularTracker

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MULTIPLATFORM-SUMMARY.md  README-Docker.md  README-MULTIPLATFORM.md  README.md  README_IMPLEMENTATION.md  README_WINDOWS.md  build_and_test.sh  build_windows.bat  build_windows.ps1  docker-build.sh  docker-compose.multiplatform.yml  docker-compose.yml  radar_tracking_architecture.md  setup_windows.bat
config/: system_config.yaml
config/algorithms/: dbscan_config.yaml  gnn_config.yaml  imm_config.yaml
deploy/: docker-swarm.yml
include/core/: DataTypes.hpp  RadarSystem.hpp  ThreadPool.hpp  Version.hpp.in
include/interfaces/: IAssociationAlgorithm.hpp  IClusteringAlgorithm.hpp  ICommunicationAdapter.hpp  IDataProcessor.hpp  IOutputAdapter.hpp  ITracker.hpp
include/management/: TrackManager.hpp
include/processing/: DBSCANClustering.hpp
include/utils/: ConfigManager.hpp  Logger.hpp  Mathematics.hpp  PerformanceMonitor.hpp
scenarios/: crossing_targets.yaml  multi_target.yaml  single_target.yaml
scripts/windows/: install_service.bat  uninstall_service.bat
src/: main.cpp
src/core/: ThreadPool.cpp
src/utils/: ConfigManager.cpp  Logger.cpp  PerformanceMonitor.cpp
tools/simulator/: RadarSimulator.cpp  RadarSimulator.hpp  main.cpp
